5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_1015.log
== TEST (2019-03-22 17:53:14) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))



-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:54:20) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
min(varA,varB,varC)



-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:57:08) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
total=(varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)



-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:59:40) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
total=(varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total-menor-maior)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:00:28) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
total=(varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total=menor-maior)



-- ERROR:
File "XXXX", line 7
    totalA=(total=menor-maior)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:01:07) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
total=(varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total-menor-maior)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:05:29) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
total=(varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- EXECUTION TIME:
0.15087
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:07:45) 
-- CODE:
varA= int(input("primeiro numero:"))
varB= int(input("segundo numero:"))
varC= int(input("terceiro numero:"))
total= (varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA= (total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- EXECUTION TIME:
0.179973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 7, in <module>
    totalA= (total-menor-maior)
NameError: name 'menor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:09:39) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA= (total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA= (total-menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:11:22) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA= (total+menor-maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA= (total+menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:12:17) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:12:17) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- EXECUTION TIME:
0.166207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:12:20) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min(varA,varB,varC)
max(varA,varB,varC)
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:14:33) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min=(varA,varB,varC)
max=(varA,varB,varC)
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total-menor-maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:14:58) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min=(varA,varB,varC)
max=(varA,varB,varC)
totalA=(total -menor -maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total -menor -maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:15:06) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
min=(varA,varB,varC)
max=(varA,varB,varC)
totalA=(total - menor - maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    totalA=(total - menor - maior)
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:22:35) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
menor=(min(varA,varB,varC)
maior=(max(varA,varB,varC)
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- ERROR:
File "XXXX", line 6
    maior=(max(varA,varB,varC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:23:20) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
menor = (min(varA,varB,varC))
maior = (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:23:30) 
-- CODE:
varA= int(input("numero 1:"))
varB= int(input("numero 2:"))
varC= int(input("numero3:"))
total= (varA+varB+varC)
menor = (min(varA,varB,varC))
maior = (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)

-- EXECUTION TIME:
0.181478
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
